fix: menu active state and add spacing in top menu styles

--- a/site/assets/css/components/_menu.scss
+++ b/site/assets/css/components/_menu.scss
@@ -98,6 +98,7 @@
   @include mappy-bp($bp-menu-collapse) {
     display: flex;
     justify-content: end;
+    column-gap: rem(10px);
     margin-bottom: rem(60px);
   }
 
